--- a/syle.css
+++ b/syle.css
@@ -1,4 +1,16 @@
 * {
-    margin: 0;
-    padding: 0;
+	margin: 0;
+	padding: 0;
+}
+
+.container {
+	width: 100vw;
+	height: max-content;
+	padding: 0 15vw;
+}
+
+.name {
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
